# fastapi-realtime-playground

./: Diagramme sans nom.drawio  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/scripts/: postCreate.sh
app/: main.py
app/api/endpoints/: users.py
app/api/helpers/: fixtures.py
app/api/models/: user.py
fastapi_realtime_playground/: main.py
scripts/: helpers.py  request.py
