[tool.poetry]
name = "fastapi-realtime-playground"
version = "0.1.0"
description = "A simple toy project to experience with FastAPI app in realtime"
authors = ["Martin Gauthier <gauthiermartin86@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_realtime_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.282"
pytest-split = "^0.8.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
