[tool.poetry]
name = "fastapi-realtime-playground"
version = "0.1.0"
description = "A simple toy project to experience with FastAPI app in realtime"
authors = ["Martin Gauthier <gauthiermartin86@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
boto3 = "^1.28.21"
websocket = "^0.2.1"
sqlmodel = "^0.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.282"
pytest-split = "^0.8.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
pre-commit = "^3.3.3"

[tool.black]
line-length = 100
target-version = ['py311']


[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = ["py311"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
